# artdaq

./: .gitignore  CMakeLists.txt  CMakePresets.json  README
artdaq/: CMakeLists.txt
artdaq/Application/: AggregatorApp.cc  AggregatorApp.hh  AggregatorCore.cc  AggregatorCore.hh  BoardReaderApp.cc  BoardReaderApp.hh  BoardReaderCore.cc  BoardReaderCore.hh  CMakeLists.txt  Commandable.cc  Commandable.hh  Commandable.sm  CommandableFragmentGenerator.cc  CommandableFragmentGenerator.fcl  CommandableFragmentGenerator.hh  CompositeDriver.hh  CompositeDriver_generator.cc  DataLoggerApp.cc  DataLoggerApp.hh  DataLoggerCore.cc  DataLoggerCore.hh  DataReceiverCore.cc  DataReceiverCore.hh  DispatcherApp.cc  DispatcherApp.hh  DispatcherCore.cc  DispatcherCore.hh  EventBuilderApp.cc  EventBuilderApp.hh  EventBuilderCore.cc  EventBuilderCore.hh  GeneratorMacros.hh  LoadParameterSet.hh  RoutingManagerApp.cc  RoutingManagerApp.hh  RoutingManagerCore.cc  RoutingManagerCore.hh  RoutingMasterApp.cc  RoutingMasterApp.hh  RoutingMasterCore.cc  (+12 more)
artdaq/Application/MPI2/: AggregatorApp.cc  AggregatorApp.hh  AggregatorCore.cc  AggregatorCore.hh  AggregatorMain.cc  BoardReaderApp.cc  BoardReaderApp.hh  BoardReaderCore.cc  BoardReaderCore.hh  BoardReaderMain.cc  CMakeLists.txt  DataLoggerMain.cc  DispatcherMain.cc  EventBuilderApp.cc  EventBuilderApp.hh  EventBuilderCore.cc  EventBuilderCore.hh  EventBuilderMain.cc  MPISentry.cc  MPISentry.hh  RoutingMasterApp.cc  RoutingMasterApp.hh  RoutingMasterCore.cc  RoutingMasterCore.hh  RoutingMasterMain.cc  StatisticsHelper.cc  pmt.rb  pmt_mpiwrapper.sh
artdaq/Application/Routing/: CMakeLists.txt  CapacityTest_policy.cc  NoOp_policy.cc  NthEvent_policy.cc  PolicyMacros.hh  RoundRobin_policy.cc  RoutingMasterPolicy.cc  RoutingMasterPolicy.hh  RoutingPacket.hh  makeRoutingMasterPolicy.hh
artdaq/Application/detail/: Commandable_sm.cpp  Commandable_sm.h  statemap.h
artdaq/ArtModules/: ArtdaqBuildInfo_module.cc  ArtdaqFragmentNamingService.h  ArtdaqFragmentNamingService_service.cc  ArtdaqGlobalsService.h  ArtdaqGlobalsService_service.cc  ArtdaqInput.hh  ArtdaqInputHelper.hh  ArtdaqInputWithFragments.hh  ArtdaqInput_source.cc  ArtdaqMetric_mfPlugin.cc  ArtdaqOutput.hh  ArtdaqSharedMemoryService.h  ArtdaqSharedMemoryServiceInterface.h  ArtdaqSharedMemoryService_service.cc  BinaryFileOutput_module.cc  BinaryMPIOutput_module.cc  BinaryNetOutput_module.cc  BuildInfo_module.hh  CMakeLists.txt  EventDump_module.cc  FragmentWatcher_module.cc  InFlightConfiguration.h  InFlightConfiguration_service.cc  InputUtilities.hh  MissingDataCheck_module.cc  NetMonInputWithFragments_source.cc  NetMonInput_source.cc  NetMonOutput_module.cc  NetMonTransportService.cc  NetMonTransportService.h  NetMonTransportServiceInterface.h  NetMonTransportService_service.cc  NetMonWrapper.cc  NetMonWrapper.hh  NetMonWrapperWithFragments.cc  NetMonWrapperWithFragments.hh  OffsetPrescale_module.cc  PrintBuildInfo_module.cc  RTIDDSInput_source.cc  RTIDDS_transfer.cc  (+26 more)
artdaq/ArtModules/RootDAQOutput-s124/: CMakeLists.txt  RootDAQOutFile.cc  RootDAQOutFile.h  RootDAQOut_module.cc
artdaq/ArtModules/RootDAQOutput-s67/: CMakeLists.txt  RootDAQOutFile.cc  RootDAQOutFile.h  RootDAQOut_module.cc
artdaq/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.hh
artdaq/DAQdata/: CMakeLists.txt  Debug.cc  Debug.hh  GenericFragmentSimulator.cc  GenericFragmentSimulator.hh  GenericFragmentSimulator_generator.cc  Globals.cc  Globals.hh  HostMap.hh  NetMonHeader.hh  PortManager.cc  PortManager.hh  TCPConnect.cc  TCPConnect.hh  TCP_listen_fd.cc  TCP_listen_fd.hh  configureMessageFacility.cc  configureMessageFacility.hh  makeFragmentGenerator.cc
artdaq/DAQrate/: CMakeLists.txt  DataReceiverManager.cc  DataReceiverManager.hh  DataSenderManager.cc  DataSenderManager.hh  DataTransferManager.cc  DataTransferManager.hh  EventStore.cc  EventStore.hh  FragmentBuffer.cc  FragmentBuffer.hh  FragmentReceiverManager.cc  FragmentReceiverManager.hh  MPITag.hh  MetricManager.cc  MetricManager.hh  Perf.cc  Perf.hh  RHandles.cc  RHandles.hh  RSockets.cc  RequestBuffer.cc  RequestBuffer.hh  RequestReceiver.cc  RequestReceiver.hh  RequestSender.cc  RequestSender.hh  SHandles.cc  SHandles.hh  SSockets.cc  SharedMemoryEventManager.cc  SharedMemoryEventManager.fcl  SharedMemoryEventManager.hh  SharedMemoryEventReceiver.cc  SharedMemoryEventReceiver.hh  StatisticsHelper.cc  StatisticsHelper.hh  TokenReceiver.cc  TokenReceiver.hh  TokenSender.cc  (+8 more)
artdaq/ExternalComms/: CMakeLists.txt  CommanderInterface.cc  CommanderInterface.hh  MakeCommanderPlugin.cc  MakeCommanderPlugin.hh  xmlrpc_commander.cc  xmlrpc_commander.hh
artdaq/Generators/: CMakeLists.txt  CommandableFragmentGenerator.cc  CommandableFragmentGenerator.fcl  CommandableFragmentGenerator.hh  CompositeDriver.hh  CompositeDriver_generator.cc  GeneratorMacros.hh  makeCommandableFragmentGenerator.cc  makeCommandableFragmentGenerator.hh
artdaq/Plugins/: MetricPlugin.hh  file_metric.cc  graphite_metric.cc
artdaq/RTIDDS/: CMakeLists.txt  RTIDDS.cc  RTIDDS.hh
artdaq/RoutingPolicies/: CMakeLists.txt  CapacityTest_policy.cc  NoOp_policy.cc  PolicyMacros.hh  PreferSameHost_policy.cc  RoundRobin_policy.cc  RoutingDestinationHelper.cc  RoutingDestinationHelper.hh  RoutingManagerPolicy.cc  RoutingManagerPolicy.hh  RoutingMasterPolicy.cc  RoutingMasterPolicy.hh  makeRoutingManagerPolicy.cc  makeRoutingManagerPolicy.hh  makeRoutingMasterPolicy.cc  makeRoutingMasterPolicy.hh
artdaq/TransferPlugins/: Autodetect_transfer.cc  Bundle_transfer.cc  CMakeLists.txt  MPITranfer.hh  MPITransfer.hh  MPI_transfer.cc  MakeTransferPlugin.cc  MakeTransferPlugin.hh  Multicast_transfer.cc  Null_transfer.cc  RHandles.cc  RSockets.hh  RTIDDS_transfer.cc  SHandles.hh  SSockets.cc  SSockets.hh  ShmemTransfer.cc  ShmemTransfer.hh  Shmem_transfer.cc  TCPSocketTransfer.cc  TCPSocketTransfer.hh  TCPSocket_transfer.cc  TransferInput_source.cc  TransferInterface.cc  TransferInterface.h  TransferInterface.hh  TransferOutput_module.cc  TransferWrapper.cc  TransferWrapper.hh  multicast_transfer.cc  shmem_transfer.cc
(+290 files in other folders)
