cet_make_library(HEADERS_TARGET_ONLY) # for e.g. artdaq/DAQdata/NetMonHeader.hh.

add_subdirectory(DAQdata)
if (${USING_RTIDDS})
  add_subdirectory(RTIDDS)
endif()
add_subdirectory(TransferPlugins)
add_subdirectory(RoutingPolicies)
add_subdirectory(DAQrate)
add_subdirectory(Generators)
cet_register_export_set(SET_NAME GeneratorUsers SET_DEFAULT)
add_subdirectory(Application)
add_subdirectory(BuildInfo)
add_subdirectory(ExternalComms)
add_subdirectory(ArtModules)
